fixed spacing/sizes, organized css

--- a/style.css
+++ b/style.css
@@ -20,8 +20,8 @@ body {
 }
 
 .chat-container {
-  width: 80%;
-  max-width: 1000px;
+  width: 60%;
+  /*max-width: 1000px; maybe add back or find another max if it doesnt look good on smaller screens*/
   height: 90vh;
   background: var(--dark-grey);
   border-radius: 16px;
@@ -38,7 +38,8 @@ body {
 
 .tab {
   flex: 1;
-  padding: 12px;
+  padding: 16px;
+  font-size: 20px;
   background: var(--medium-grey);
   border: none;
   color: var(--white);
@@ -100,13 +101,13 @@ body {
   display: flex;
   align-items: center;
   background: var(--medium-grey);
-  padding: 20px;
-  gap: 20px;
+  padding: 18px;
+  gap: 18px;
 }
 
 input[type="text"] {
   flex: 1;
-  padding: 10px;
+  padding: 18px;
   border: none;
   border-radius: 8px;
   background: var(--white);
@@ -115,13 +116,14 @@ input[type="text"] {
 
 input[type="text"]::placeholder {
   color: var(--light-grey);
+  font-size:16px;
 }
 
 .input-box button {
   background: none;
   border: none;
   color: var(--light-grey);
-  font-size: 18px;
+  font-size: 24px;
   cursor: pointer;
 }
 
@@ -165,7 +167,7 @@ body {
 }
 
 #emojiBtn {
-  font-size: 18px;
+  font-size: 28px;
   color: var(--light-grey);
 }
 
@@ -173,8 +175,8 @@ body {
   color: var(--white);
   background: var(--blue);
   border-radius: 50%;
-  width: 36px;
-  height: 36px;
+  width: 48px;
+  height: 48px;
   display: flex;
   align-items: center;
   justify-content: center;
